--- a/src/form.html
+++ b/src/form.html
@@ -12,9 +12,7 @@
   </head>
   <body>
     <header class="main-header">
-      <div
-        class="main-header__wrapper main-header__wrapper--border-bottom container"
-      >
+      <div class="main-header__wrapper main-header__wrapper--line container">
         <div class="main-header__container-nav">
           <a class="main-header__icon-logo" href="index.html">
             <picture>
