--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
               />
             </picture>
           </a>
-          <div class="main-header__name-logo logo">
+          <div class="main-header__name-logo">
             <img
               src="./img/cat-energy-text-mobile.svg"
               width="101"
