В location вместо тега <div> добавил тег <p>. Начинается с новой строки

--- a/src/form.html
+++ b/src/form.html
@@ -363,7 +363,7 @@
               <p class="location__address-place">
                 ул. Большая Конюшенная, д. 19/8
               </p>
-              <div class="location__address-city">Санкт-Петербург</div>
+              <p class="location__address-city">Санкт-Петербург</p>
             </address>
           </div>
           <!-- здесь будет карта -->
