Добавил общий класс с модификатором --line, в моб. версии есть серые линии

--- a/src/catalog.html
+++ b/src/catalog.html
@@ -131,7 +131,9 @@
                 >Заказать</a
               >
             </li>
-            <li class="catalog-list__item catalog-card">
+            <li
+              class="catalog-list__item catalog-list__item--line catalog-card"
+            >
               <picture>
                 <source
                   media="(min-width: 1440px)"
@@ -179,7 +181,9 @@
                 >Заказать</a
               >
             </li>
-            <li class="catalog-list__item catalog-card">
+            <li
+              class="catalog-list__item catalog-list__item--line catalog-card"
+            >
               <picture>
                 <source
                   media="(min-width: 1440px)"
@@ -227,7 +231,9 @@
                 >Заказать</a
               >
             </li>
-            <li class="catalog-list__item catalog-card">
+            <li
+              class="catalog-list__item catalog-list__item--line catalog-card"
+            >
               <picture>
                 <source
                   media="(min-width: 1440px)"
@@ -275,7 +281,9 @@
                 >Заказать</a
               >
             </li>
-            <li class="catalog-list__item catalog-card">
+            <li
+              class="catalog-list__item catalog-list__item--line catalog-card"
+            >
               <picture>
                 <source
                   media="(min-width: 1440px)"
@@ -323,7 +331,9 @@
                 >Заказать</a
               >
             </li>
-            <li class="catalog-list__item catalog-card">
+            <li
+              class="catalog-list__item catalog-list__item--line catalog-card"
+            >
               <picture>
                 <source
                   media="(min-width: 1440px)"
@@ -371,7 +381,9 @@
                 >Заказать</a
               >
             </li>
-            <li class="catalog-list__item catalog-card">
+            <li
+              class="catalog-list__item catalog-list__item--line catalog-card"
+            >
               <picture>
                 <source
                   media="(min-width: 1440px)"
@@ -420,7 +432,7 @@
               >
             </li>
             <li
-              class="catalog-list__item catalog-list__item--show-more catalog-card catalog-card--show-more"
+              class="catalog-list__item catalog-list__item--line catalog-list__item--show-more catalog-card catalog-card--show-more"
             >
               <picture>
                 <source
