изменил теги на dl dt и dd в карточках

--- a/src/catalog.html
+++ b/src/catalog.html
@@ -114,18 +114,18 @@
                 <div class="catalog-card__description">
                   <h3 class="catalog-card__heading">Cat Energy Pro 500 г</h3>
                   <div class="catalog-card__compound-container">
-                    <div class="catalog-card__compound">
-                      <span class="catalog-card__compound-item">Масса</span>
-                      <span class="catalog-card__compound-item">500г</span>
-                    </div>
-                    <div class="catalog-card__compound">
-                      <span class="catalog-card__compound-item">Вкус</span>
-                      <span class="catalog-card__compound-item">Курица</span>
-                    </div>
-                    <div class="catalog-card__compound">
-                      <span class="catalog-card__compound-item">Цена</span>
-                      <span class="catalog-card__compound-item">700 ₽</span>
-                    </div>
+                    <dl class="catalog-card__compound">
+                      <dt class="catalog-card__compound-item">Масса</dt>
+                      <dd class="catalog-card__compound-item">500г</dd>
+                    </dl>
+                    <dl class="catalog-card__compound">
+                      <dt class="catalog-card__compound-item">Вкус</dt>
+                      <dd class="catalog-card__compound-item">Курица</dd>
+                    </dl>
+                    <dl class="catalog-card__compound">
+                      <dt class="catalog-card__compound-item">Цена</dt>
+                      <dd class="catalog-card__compound-item">700 ₽</dd>
+                    </dl>
                   </div>
                 </div>
                 <a class="catalog-card__button button button--primary" href="#"
@@ -164,18 +164,18 @@
                 <div class="catalog-card__description">
                   <h3 class="catalog-card__heading">Cat Energy Pro 1000 г</h3>
                   <div class="catalog-card__compound-container">
-                    <div class="catalog-card__compound">
-                      <span class="catalog-card__compound-item">Масса</span>
-                      <span class="catalog-card__compound-item">1000г</span>
-                    </div>
-                    <div class="catalog-card__compound">
-                      <span class="catalog-card__compound-item">Вкус</span>
-                      <span class="catalog-card__compound-item">Курица</span>
-                    </div>
-                    <div class="catalog-card__compound">
-                      <span class="catalog-card__compound-item">Цена</span>
-                      <span class="catalog-card__compound-item">1000 ₽</span>
-                    </div>
+                    <dl class="catalog-card__compound">
+                      <dt class="catalog-card__compound-item">Масса</dt>
+                      <dd class="catalog-card__compound-item">1000г</dd>
+                    </dl>
+                    <dl class="catalog-card__compound">
+                      <dt class="catalog-card__compound-item">Вкус</dt>
+                      <dd class="catalog-card__compound-item">Курица</dd>
+                    </dl>
+                    <dl class="catalog-card__compound">
+                      <dt class="catalog-card__compound-item">Цена</dt>
+                      <dd class="catalog-card__compound-item">1000 ₽</dd>
+                    </dl>
                   </div>
                 </div>
                 <a class="catalog-card__button button button--primary" href="#"
@@ -214,18 +214,18 @@
                 <div class="catalog-card__description">
                   <h3 class="catalog-card__heading">Cat Energy Pro 500 г</h3>
                   <div class="catalog-card__compound-container">
-                    <div class="catalog-card__compound">
-                      <span class="catalog-card__compound-item">Масса</span>
-                      <span class="catalog-card__compound-item">500г</span>
-                    </div>
-                    <div class="catalog-card__compound">
-                      <span class="catalog-card__compound-item">Вкус</span>
-                      <span class="catalog-card__compound-item">Рыба</span>
-                    </div>
-                    <div class="catalog-card__compound">
-                      <span class="catalog-card__compound-item">Цена</span>
-                      <span class="catalog-card__compound-item">700 ₽</span>
-                    </div>
+                    <dl class="catalog-card__compound">
+                      <dt class="catalog-card__compound-item">Масса</dt>
+                      <dd class="catalog-card__compound-item">500г</dd>
+                    </dl>
+                    <dl class="catalog-card__compound">
+                      <dt class="catalog-card__compound-item">Вкус</dt>
+                      <dd class="catalog-card__compound-item">Рыба</dd>
+                    </dl>
+                    <dl class="catalog-card__compound">
+                      <dt class="catalog-card__compound-item">Цена</dt>
+                      <dd class="catalog-card__compound-item">700 ₽</dd>
+                    </dl>
                   </div>
                 </div>
                 <a class="catalog-card__button button button--primary" href="#"
@@ -264,18 +264,18 @@
                 <div class="catalog-card__description">
                   <h3 class="catalog-card__heading">Cat Energy Pro 1000 г</h3>
                   <div class="catalog-card__compound-container">
-                    <div class="catalog-card__compound">
-                      <span class="catalog-card__compound-item">Масса</span>
-                      <span class="catalog-card__compound-item">1000г</span>
-                    </div>
-                    <div class="catalog-card__compound">
-                      <span class="catalog-card__compound-item">Вкус</span>
-                      <span class="catalog-card__compound-item">Рыба</span>
-                    </div>
-                    <div class="catalog-card__compound">
-                      <span class="catalog-card__compound-item">Цена</span>
-                      <span class="catalog-card__compound-item">1000 ₽</span>
-                    </div>
+                    <dl class="catalog-card__compound">
+                      <dt class="catalog-card__compound-item">Масса</dt>
+                      <dd class="catalog-card__compound-item">1000г</dd>
+                    </dl>
+                    <dl class="catalog-card__compound">
+                      <dt class="catalog-card__compound-item">Вкус</dt>
+                      <dd class="catalog-card__compound-item">Рыба</dd>
+                    </dl>
+                    <dl class="catalog-card__compound">
+                      <dt class="catalog-card__compound-item">Цена</dt>
+                      <dd class="catalog-card__compound-item">1000 ₽</dd>
+                    </dl>
                   </div>
                 </div>
                 <a class="catalog-card__button button button--primary" href="#"
@@ -314,18 +314,18 @@
                 <div class="catalog-card__description">
                   <h3 class="catalog-card__heading">Cat Energy Slim 500 г</h3>
                   <div class="catalog-card__compound-container">
-                    <div class="catalog-card__compound">
-                      <span class="catalog-card__compound-item">Масса</span>
-                      <span class="catalog-card__compound-item">500г</span>
-                    </div>
-                    <div class="catalog-card__compound">
-                      <span class="catalog-card__compound-item">Вкус</span>
-                      <span class="catalog-card__compound-item">Гречка</span>
-                    </div>
-                    <div class="catalog-card__compound">
-                      <span class="catalog-card__compound-item">Цена</span>
-                      <span class="catalog-card__compound-item">400 ₽</span>
-                    </div>
+                    <dl class="catalog-card__compound">
+                      <dt class="catalog-card__compound-item">Масса</dt>
+                      <dd class="catalog-card__compound-item">500г</dd>
+                    </dl>
+                    <dl class="catalog-card__compound">
+                      <dt class="catalog-card__compound-item">Вкус</dt>
+                      <dd class="catalog-card__compound-item">Гречка</dd>
+                    </dl>
+                    <dl class="catalog-card__compound">
+                      <dt class="catalog-card__compound-item">Цена</dt>
+                      <dd class="catalog-card__compound-item">400 ₽</dd>
+                    </dl>
                   </div>
                 </div>
                 <a class="catalog-card__button button button--primary" href="#"
@@ -364,18 +364,18 @@
                 <div class="catalog-card__description">
                   <h3 class="catalog-card__heading">Cat Energy Slim 1000 г</h3>
                   <div class="catalog-card__compound-container">
-                    <div class="catalog-card__compound">
-                      <span class="catalog-card__compound-item">Масса</span>
-                      <span class="catalog-card__compound-item">1000г</span>
-                    </div>
-                    <div class="catalog-card__compound">
-                      <span class="catalog-card__compound-item">Вкус</span>
-                      <span class="catalog-card__compound-item">Гречка</span>
-                    </div>
-                    <div class="catalog-card__compound">
-                      <span class="catalog-card__compound-item">Цена</span>
-                      <span class="catalog-card__compound-item">700 ₽</span>
-                    </div>
+                    <dl class="catalog-card__compound">
+                      <dt class="catalog-card__compound-item">Масса</dt>
+                      <dd class="catalog-card__compound-item">1000г</dd>
+                    </dl>
+                    <dl class="catalog-card__compound">
+                      <dt class="catalog-card__compound-item">Вкус</dt>
+                      <dd class="catalog-card__compound-item">Гречка</dd>
+                    </dl>
+                    <dl class="catalog-card__compound">
+                      <dt class="catalog-card__compound-item">Цена</dt>
+                      <dd class="catalog-card__compound-item">700 ₽</dd>
+                    </dl>
                   </div>
                 </div>
                 <a class="catalog-card__button button button--primary" href="#"
@@ -414,18 +414,18 @@
                 <div class="catalog-card__description">
                   <h3 class="catalog-card__heading">Cat Energy Slim 500 г</h3>
                   <div class="catalog-card__compound-container">
-                    <div class="catalog-card__compound">
-                      <span class="catalog-card__compound-item">Масса</span>
-                      <span class="catalog-card__compound-item">500г</span>
-                    </div>
-                    <div class="catalog-card__compound">
-                      <span class="catalog-card__compound-item">Вкус</span>
-                      <span class="catalog-card__compound-item">Рис</span>
-                    </div>
-                    <div class="catalog-card__compound">
-                      <span class="catalog-card__compound-item">Цена</span>
-                      <span class="catalog-card__compound-item">500 ₽</span>
-                    </div>
+                    <dl class="catalog-card__compound">
+                      <dt class="catalog-card__compound-item">Масса</dt>
+                      <dd class="catalog-card__compound-item">500г</dd>
+                    </dl>
+                    <dl class="catalog-card__compound">
+                      <dt class="catalog-card__compound-item">Вкус</dt>
+                      <dd class="catalog-card__compound-item">Рис</dd>
+                    </dl>
+                    <dl class="catalog-card__compound">
+                      <dt class="catalog-card__compound-item">Цена</dt>
+                      <dd class="catalog-card__compound-item">500 ₽</dd>
+                    </dl>
                   </div>
                 </div>
                 <a class="catalog-card__button button button--primary" href="#"
