Исправил вид карточек

--- a/src/catalog.html
+++ b/src/catalog.html
@@ -434,9 +434,9 @@
               </article>
             </li>
             <li
-              class="catalog-list__item catalog-list__item--line catalog-list__item--show-more catalog-card--show-more"
+              class="catalog-list__item catalog-list__item--line catalog-list__item--show-more"
             >
-              <article class="catalog-card">
+              <article class="catalog-card catalog-card--show-more">
                 <picture>
                   <source
                     media="(min-width: 769px)"
