--- a/src/catalog.html
+++ b/src/catalog.html
@@ -479,7 +479,9 @@
           </h2>
           <div class="additional-product__content-wrapper">
             <ul class="additional-product__list additional-product-list">
-              <li class="additional-product-list__item">
+              <li
+                class="additional-product-list__item additional-product-list__item--line"
+              >
                 <h3 class="additional-product-list__title">Сахарозаменитель</h3>
                 <div class="additional-product-list__amount">
                   <span class="additional-product-list__amount-package"
@@ -495,7 +497,9 @@
                   >Заказать</a
                 >
               </li>
-              <li class="additional-product-list__item">
+              <li
+                class="additional-product-list__item additional-product-list__item--line"
+              >
                 <h3 class="additional-product-list__title">Питьевая вода</h3>
                 <div class="additional-product-list__amount">
                   <span class="additional-product-list__amount-package"
@@ -511,7 +515,9 @@
                   >Заказать</a
                 >
               </li>
-              <li class="additional-product-list__item">
+              <li
+                class="additional-product-list__item additional-product-list__item--line"
+              >
                 <h3 class="additional-product-list__title">Молоко</h3>
                 <div class="additional-product-list__amount">
                   <span class="additional-product-list__amount-package"
@@ -527,7 +533,9 @@
                   >Заказать</a
                 >
               </li>
-              <li class="additional-product-list__item">
+              <li
+                class="additional-product-list__item additional-product-list__item--line"
+              >
                 <h3 class="additional-product-list__title">Витамины</h3>
                 <div class="additional-product-list__amount">
                   <span class="additional-product-list__amount-package"
