Добавил модификатор картинкам котам до и после, --thin задал внешний отступ

--- a/src/index.html
+++ b/src/index.html
@@ -479,7 +479,7 @@
                   height="512"
                 />
                 <img
-                  class="cat-result__image"
+                  class="cat-result__image cat-result__image--thin"
                   src="./img/cat-before-mobile.png"
                   srcset="./img/cat-before-mobile-2x.png 2x"
                   width="140"
@@ -559,7 +559,7 @@
                   height="512"
                 />
                 <img
-                  class="cat-result__image"
+                  class="cat-result__image cat-result__image--fat"
                   src="./img/cat-after-mobile.png"
                   srcset="./img/cat-after-mobile-2x.png 2x"
                   width="140"
