--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,24 @@
             alt="Кэт энерджи"
           />
         </a>
+        <nav class="main-header__nav main-nav">
+          <button class="main-nav__toggle" type="button">
+            <span class="visually-hidden">Открыть меню</span>
+          </button>
+          <ul class="main-nav__list">
+            <li class="main-nav__item">
+              <a href="index.html" class="main-nav__link">Главная</a>
+            </li>
+            <li class="main-nav__item">
+              <a href="catalog.html" class="main-nav__link"
+                >Каталог продукции</a
+              >
+            </li>
+            <li class="main-nav__item">
+              <a href="form.html" class="main-nav__link">Подбор программы</a>
+            </li>
+          </ul>
+        </nav>
       </div>
     </header>
   </body>
