--- a/src/index.html
+++ b/src/index.html
@@ -37,5 +37,9 @@
         </nav>
       </div>
     </header>
+
+    <main class="main-container">
+      <h1 class="visually-hidden">Программа - Кэт энерджи</h1>
+    </main>
   </body>
 </html>
