Удалил изображения, переименовал. Сверстал секцию питания

--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,27 @@
 
     <main class="main-container">
       <h1 class="visually-hidden">Программа - Кэт энерджи</h1>
+
+      <section class="nutrition">
+        <div class="nutrition__wrapper">
+          <div class="nutrition__container-description">
+            <h2 class="nutrition__title title">
+              Функциональное питание для котов
+            </h2>
+            <p class="nutrition__text">Занялся собой? Займись котом!</p>
+            <a class="nutrition__link button" href="form.html"
+              >Подобрать программу</a
+            >
+          </div>
+          <img
+            class="nutrition__image"
+            src="./img/nutrition-package-mobile.png"
+            width="280"
+            height="270"
+            alt="Упоковка питании"
+          />
+        </div>
+      </section>
     </main>
   </body>
 </html>
