Приступил к верстке виды програм, добавил два контейнара разных програм

--- a/src/index.html
+++ b/src/index.html
@@ -61,6 +61,17 @@
           />
         </div>
       </section>
+
+      <section class="propgram-types">
+        <div class="program-types__wrapper">
+          <div
+            class="program-types__program program-type program-type--weight-loss"
+          ></div>
+          <div
+            class="program-types__program program-type program-type--weight-gain"
+          ></div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
