Добавил изображения кота, сверстал секцию живой пример

--- a/src/index.html
+++ b/src/index.html
@@ -241,6 +241,72 @@
           </ul>
         </div>
       </section>
+
+      <section class="living-example">
+        <div class="living-example__wrapper">
+          <h2 class="living-example__title">Живой пример</h2>
+          <p class="living-example__text">
+            Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на
+            Cat Energy Slim. Отличный результат без изнуряющих тренировок! При
+            этом он не менял своих привычек и по-прежнему спит по 16 часов в
+            день.
+          </p>
+          <dl class="living-example__list">
+            <div class="living-example__item">
+              <dt class="living-example__item-heading">5 кг</dt>
+              <dd class="living-example__item-text">снижение веса</dd>
+            </div>
+            <div class="living-example__item">
+              <dt class="living-example__item-heading">60 дней</dt>
+              <dd class="living-example__item-text">снижение веса</dd>
+            </div>
+          </dl>
+          <div class="living-example__result">
+            <span class="living-example__result-expenses"
+              >Затраты на питание:</span
+            >
+            <span class="living-example__result-price">15 000 руб.</span>
+          </div>
+          <div class="living-example__cat-result cat-result">
+            <img
+              class="cat-result__image"
+              src="./img/cat-before.png"
+              width="140"
+              height="256"
+              alt="кот до того"
+            />
+            <svg
+              width="40"
+              height="256"
+              viewBox="0 0 40 256"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <rect x="18" width="4" height="256" rx="2" fill="#666666" />
+              <rect x="1" y="109" width="38" height="38" rx="19" fill="white" />
+              <path d="M16 119L8 128L16 137V119Z" fill="#666666" />
+              <path d="M32 128L24 119V137L32 128Z" fill="#666666" />
+              <rect
+                x="1"
+                y="109"
+                width="38"
+                height="38"
+                rx="19"
+                stroke="#666666"
+                stroke-width="2"
+              />
+            </svg>
+
+            <img
+              class="cat-result__image"
+              src="./img/cat-after.png"
+              width="140"
+              height="256"
+              alt="кот до того"
+            />
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
