--- a/src/catalog.html
+++ b/src/catalog.html
@@ -37,5 +37,15 @@
         </nav>
       </div>
     </header>
+
+    <main class="main-container">
+      <h1 class="main-container__title">Каталог продукции</h1>
+
+      <section class="catalog">
+        <div class="catalog__wrapper">
+          <h2 class="visually-hidden">Каталог продукции</h2>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
