--- a/src/catalog.html
+++ b/src/catalog.html
@@ -44,6 +44,122 @@
       <section class="catalog">
         <div class="catalog__wrapper">
           <h2 class="visually-hidden">Каталог продукции</h2>
+          <ul class="catalog__list">
+            <li class="catalog__list-item">
+              <article class="catalog-card">
+                <img
+                  class="catalog-card__image"
+                  src="./img/catalog/catalog-1-mobile.png"
+                  width="68"
+                  height="86"
+                  alt="упоковка продуктка"
+                />
+                <div class="catalog-card__description">
+                  <h3 class="catalog-card__heading">Cat Energy PRO 500 г</h3>
+                </div>
+              </article>
+            </li>
+            <li class="catalog__list-item">
+              <article class="catalog-card">
+                <img
+                  class="catalog-card__image"
+                  src="./img/catalog/catalog-2-mobile.png"
+                  width="84"
+                  height="100"
+                  alt="упоковка продуктка"
+                />
+                <div class="catalog-card__description">
+                  <h3 class="catalog-card__heading">Cat Energy PRO 1000 г</h3>
+                </div>
+              </article>
+            </li>
+            <li class="catalog__list-item">
+              <article class="catalog-card">
+                <img
+                  class="catalog-card__image"
+                  src="./img/catalog/catalog-3-mobile.png"
+                  width="68"
+                  height="78"
+                  alt="упоковка продуктка"
+                />
+                <div class="catalog-card__description">
+                  <h3 class="catalog-card__heading">Cat Energy PRO 500 г</h3>
+                </div>
+              </article>
+            </li>
+            <li class="catalog__list-item">
+              <article class="catalog-card">
+                <img
+                  class="catalog-card__image"
+                  src="./img/catalog/catalog-4-mobile.png"
+                  width="84"
+                  height="100"
+                  alt="упоковка продуктка"
+                />
+                <div class="catalog-card__description">
+                  <h3 class="catalog-card__heading">Cat Energy PRO 1000 г</h3>
+                </div>
+              </article>
+            </li>
+            <li class="catalog__list-item">
+              <article class="catalog-card">
+                <img
+                  class="catalog-card__image"
+                  src="./img/catalog/catalog-5-mobile.png"
+                  width="68"
+                  height="78"
+                  alt="упоковка продуктка"
+                />
+                <div class="catalog-card__description">
+                  <h3 class="catalog-card__heading">Cat Energy slim 500 г</h3>
+                </div>
+              </article>
+            </li>
+            <li class="catalog__list-item">
+              <article class="catalog-card">
+                <img
+                  class="catalog-card__image"
+                  src="./img/catalog/catalog-6-mobile.png"
+                  width="84"
+                  height="100"
+                  alt="упоковка продуктка"
+                />
+                <div class="catalog-card__description">
+                  <h3 class="catalog-card__heading">Cat Energy slim 1000 г</h3>
+                </div>
+              </article>
+            </li>
+            <li class="catalog__list-item">
+              <article class="catalog-card">
+                <img
+                  class="catalog-card__image"
+                  src="./img/catalog/catalog-7-mobile.png"
+                  width="72"
+                  height="84"
+                  alt="упоковка продуктка"
+                />
+                <div class="catalog-card__description">
+                  <h3 class="catalog-card__heading">Cat Energy slim 500 г</h3>
+                </div>
+              </article>
+            </li>
+            <li class="catalog__list-item">
+              <article class="catalog-card">
+                <img
+                  class="catalog-card__image"
+                  src="./img/catalog-show-more.svg"
+                  width="30"
+                  height="30"
+                  alt="показать ещё"
+                />
+                <div class="catalog-card__description">
+                  <h3 class="catalog-card__heading">
+                    Показать еще 100500 товаров
+                  </h3>
+                </div>
+              </article>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
